# nstimes

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bump_version.py  gen_docs.sh  get_version.py  pyproject.toml  pytest_cov.sh  pytest_watch.sh  tag_and_push.sh  test.py
.github/workflows/: actions.yml  pre-commit.yml  publish.yml  publish_dockerhub.yml  publish_pypi.yml  tag.yml
nstimes/: departure.py  main.py  printers.py  server.py  stations.json  styles.py  utils.py
nstimes/types/: departure.py
tests/: conftest.py  strategies.py  test_departure.py  test_main.py  test_printers.py  test_server.py
