[tool.poetry]
name = "nstimes"
version = "0.1.2"
description = "CLI tool to obtain schedule info from the dutch railway services"
authors = ["Erik van Raalte"]
readme = "README.md"
license = "MIT"
keywords = ["nederland", "NS","spoorwegen","Nederlandse","reisplanner"]
repository = "https://github.com/evanraalte/nstimes"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.25.0"
typer = {version = "^0.9.0", extras = ["all"]}


[tool.poetry.scripts]
nstimes = "nstimes.main:app"

[tool.poetry.group.test.dependencies]
httpx-cache = "^0.13.0"
pytest = "^7.4.2"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
